--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <h1 id="justClick">Just click the darn image to download it bud &#128074</h1>
         <h1 id="instructions">Just paste an image to this site bud, we'll make sure it comes out dank &#128293</h1>
         <h1 id="instructionsDrag">Or drag some image into the friggin box &#128071</h1>
+        <input id="input" type="text" placeholder="paste image here.."/>
         <div id="box" class="dragBox"
           ondrop="onDrop(event)"
           ondragover="dragging(event)"
