--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     />
     <link rel="manifest" href="/manifest.json">
   </head>
-  <body>
+  <body style="background-color: rgb(45, 52, 58); color: white;">
     <header>
         <h1 class="title">Dankify</h1>
     </header>
