--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="innerContainer">
         <img id="dankPic" src="" alt="upcoming dank picture" />
         <h1 id="justClick">Just click the darn image to download it bud &#128074</h1>
-        <h1 id="instructions">Just paste an image to this site bud, we'll make sure it comes out dank &#128293</h1>
+        <h1 id="instructions">Just paste an image to this site bud, we'll make sure it comes out dank &#128293 &#128640</h1>
         <h1 id="instructionsDrag">Or drag some image into the friggin box &#128071</h1>
         <input id="input" type="text" placeholder="paste image here.."/>
         <div id="box" class="dragBox"
@@ -38,6 +38,9 @@
         <div class="innerContainer">
             <h3 class="subtitle">Hot tip for my lads on Windows &#129305 (win + shift + s) is the dankest way to
                 capure sweet screenshots &#128526
+            </h3>
+            <h3 class="subtitle">Or for my players on the Steve Jobs OS &#128187 <br> Use (cmd + shift + 4), then hold (ctrl) on capture and
+              that sweet image will go straight to your clipboard ready to be pasted here bud &#129327
             </h3>
         </div>
     </div>
