--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Dankify</title>
-    <meta name="description" content="" />
+    <title>Dankify - dank images made easy</title>
+    <meta name="description" content="The simplest way to add sweet levels of compression to your images available on the web!" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="styles.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
