--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     <div class="container">
       <div class="innerContainer">
         <img id="dankPic" src="" alt="upcoming dank picture" />
-        <h1 id="clipboardSuccess">Added the dank image to your Clipboard 🔥 <br>or</h1>
+        <h1 id="clipboardSuccess">Added the dank image to your Clipboard 🔥</h1>
+        <h1 id="clipboardSuccessOr">Or</h1>
         <h1 id="justClick">Just click the darn image to download it bud &#128074</h1>
         <h1 id="instructions">Just paste an image to this site bud, we'll make sure it comes out dank &#128293 &#128640</h1>
         <h1 id="instructionsDrag">Or drag some image into the friggin box &#128071</h1>
